Colab を使用して作成されました

--- a/Python_basic.ipynb
+++ b/Python_basic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1k3k8539p-fyJ6Lb1sIqx4VZBpy4ZQRA7",
-      "authorship_tag": "ABX9TyOLu1SoS+TEsSimAHtvwTEA",
+      "authorship_tag": "ABX9TyNfMs1lP+DhoLMvR0GvT8xo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,49 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "## Pandas"
+      ],
       "metadata": {
-        "id": "CAJbS9eBGUFx"
+        "id": "xig7YoLmLmIl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "CAJbS9eBGUFx",
+        "outputId": "a962fa63-4300-408f-e9f6-748461e6f14f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n"
+          ]
+        }
+      ],
+      "source": [
+        "!git add .\n",
+        "!git commit -m \"first commit\"\n",
+        "!git push origin main"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "o6JGMq_DLt94"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
