--- a/neural_network_editor.ipynb
+++ b/neural_network_editor.ipynb
@@ -1468,12 +1468,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "FUaTssKVL7Hc"
+        "id": "FUaTssKVL7Hc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3bc12d90-0be8-4a80-c4ff-b1ab0a3870ec"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "X_train: (60000, 28, 28, 1)\n",
+            "X_test: (10000, 28, 28, 1)\n"
+          ]
+        }
+      ],
+      "source": [
+        "X_train = X_train.reshape((60000, 28, 28, 1))\n",
+        "X_test = X_test.reshape((10000, 28, 28, 1))\n",
+        "print(\"X_train:\",X_train.shape)\n",
+        "print(\"X_test:\",X_test.shape)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1824,21 +1842,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "1HuHSM3_L7Hg",
-        "outputId": "740ebc70-ad23-4e85-b6d2-4bf01b1ec76a"
+        "outputId": "a880962c-7a3e-40df-f2ea-d44d220d8cdc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 174
+        }
       },
       "outputs": [
         {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb.npz\n",
+            "17464789/17464789 [==============================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb_word_index.json\n",
+            "1641221/1641221 [==============================] - 0s 0us/step\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "\"? this film was just brilliant casting location scenery story direction everyone's really suited the part they played and you could just imagine being there robert ? is an amazing actor and now the same being director ? father came from the same scottish island as myself so i loved the fact there was a real connection with this film the witty remarks throughout the film were great it was just brilliant so much that i bought the film as soon as it was released for ? and would recommend it to everyone to watch and the fly fishing was amazing really cried at the end it was so sad and you know what they say if you cry at a film it must have been good and this definitely was also ? to the two little boy's that played the ? of norman and paul they were just brilliant children are often left out of the ? list i think because the stars that play them all grown up are such a big profile for the whole film but these children are amazing and should be praised for what they have done don't you think the whole story was so lovely because it was true and was someone's life after all that was shared with us all\""
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "execution_count": 102,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 27
         }
       ],
       "source": [
@@ -1870,12 +1905,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
-        "id": "n6kPo8oVL7Hh"
+        "id": "n6kPo8oVL7Hh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dea5f275-d7e0-46ef-cfa2-3f0f35817bbf"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "X_train (25000,)\n",
+            "X_test (25000,)\n",
+            "y_train (25000,)\n",
+            "y_test (25000,)\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"X_train\",X_train.shape)\n",
+        "print(\"X_test\",X_test.shape)\n",
+        "print(\"y_train\",y_train.shape)\n",
+        "print(\"y_test\",y_test.shape)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1893,7 +1948,16 @@
         "id": "t7iA-4JhL7Hh"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "print(\"X_train[0]行数\",len(X_train[0]))\n",
+        "print(\"X_train[0]最大値\",np.array(X_train[0]).max())\n",
+        "print(\"X_train[0]最小値\",np.array(X_train[0]).min())\n",
+        "print(\"X_train[0]ユニーク数\",pd.Series(X_train[0]).nunique())\n",
+        "print(\"X_train[1]行数\",len(X_train[1]))\n",
+        "print(\"X_train[1]最大値\",np.array(X_train[1]).max())\n",
+        "print(\"X_train[1]最小値\",np.array(X_train[1]).min())\n",
+        "print(\"X_train[1]ユニーク数\",pd.Series(X_train[1]).nunique())"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1906,12 +1970,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
-        "id": "7SMiSoZHL7Hh"
+        "id": "7SMiSoZHL7Hh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2f587046-4607-47b4-c77b-dc73e7c0afc4"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "行数 25000\n",
+            "最大値 1\n",
+            "最小値 0\n",
+            "ユニーク数 2\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"行数\",len(y_train))\n",
+        "print(\"最大値\",np.array(y_train).max())\n",
+        "print(\"最小値\",np.array(y_train).min())\n",
+        "print(\"ユニーク数\",pd.Series(y_train).nunique())"
+      ]
     },
     {
       "cell_type": "markdown",
