--- a/natural_language_editor.ipynb
+++ b/natural_language_editor.ipynb
@@ -856,12 +856,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "XWsNFcPcqcor"
+        "id": "XWsNFcPcqcor",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9f082bde-22c3-4481-cab3-f7c096fa3d6c"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "aaa@google.com\n"
+          ]
+        }
+      ],
+      "source": [
+        "l = 'Dear aaa@google.com Mr.Sato'\n",
+        "match = re.search(r'[\\w.-]+@[\\w.-]+', l)\n",
+        "print(match.group())"
+      ]
     },
     {
       "cell_type": "markdown",
